FE basic(Angular) and sqlite3 added

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,10 @@
     "configurations": [
 
         {
-            "name": "Python Debugger: Controller",
+            "name": "Python Debugger: Startup",
             "type": "debugpy",
             "request": "launch",
-            "program": "/home/athena/ECO6800/controller.py",
+            "program": "/home/athena/ECO6800/startup.py",
             "console": "integratedTerminal"
         }
     ]
