--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,11 @@
     "configurations": [
 
         {
+            "cwd": "/home/athena/ECO6800/backend",
             "name": "Python Debugger: Startup",
             "type": "debugpy",
             "request": "launch",
-            "program": "/home/athena/ECO6800/startup.py",
+            "program": "/home/athena/ECO6800/backend/startup.py",
             "console": "integratedTerminal"
         }
     ]
